--- a/Blog_Musica/css/estilos.css
+++ b/Blog_Musica/css/estilos.css
@@ -1,34 +1,37 @@
-[class*="col-"] {
-    float: left;
-    padding: 5px;
-    border: 1px solid black;
-    min-height: 50px;
-    height: 100%;
-}
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-
 body{
-  background-color: #90caf9;
+  background-color: #1a237e;
+  font-family: fantasy;
+  font-size: 20px;
+  color: black;
 }
 
-.navbar-inverse {
-  background-color: #0d47a1;
-  min-height: 10%;
-  border: none;
+
+
+.logo{
+  width: 80px;
+  height: 80px;
 }
 
-.logo-img {
-  width: 100px;
+.redes-sociales {
+  margin-top: 18px;
+  margin-left: 40%;
+}
+
+.img-social {
+  width: 35px;
+  height: 35px;
+}
+
+.logo-redes {
+  height: 50%;
+  background-color: #00b0ff;
+}
+
+#menu{
+  font-size: 100%;
+  text-align: center;
+  letter-spacing: 1px;
+  word-spacing: 12px;
+  height: 60px;
+  margin-top: 15px;
 }
