--- a/Blog_Musica/css/estilos.css
+++ b/Blog_Musica/css/estilos.css
@@ -2,7 +2,7 @@ body{
   background-color: #1a237e;
   font-family: fantasy;
   font-size: 20px;
-  color: black;
+  color: white;
 }
 
 
@@ -34,4 +34,20 @@ body{
   word-spacing: 12px;
   height: 60px;
   margin-top: 15px;
+}
+
+.img-noticias {
+  width: 100%;
+}
+
+h3{
+  text-align: center;
+}
+
+p {
+  text-align: justify;
+}
+
+.form-control{
+  background-color: white;
 }
