--- a/Blog_Musica/css/estilos.css
+++ b/Blog_Musica/css/estilos.css
@@ -3,6 +3,7 @@ body{
   font-family: fantasy;
   font-size: 20px;
   color: white;
+  counter-reset:circulo;
 }
 
 
@@ -28,11 +29,11 @@ body{
 }
 
 #menu{
-  font-size: 100%;
+  font-size: 95%;
   text-align: center;
   letter-spacing: 1px;
-  word-spacing: 12px;
-  height: 60px;
+  word-spacing: 8px;
+  height: 78px;
   margin-top: 15px;
 }
 
@@ -40,14 +41,65 @@ body{
   width: 100%;
 }
 
+
 h3{
   text-align: center;
 }
 
-p {
+.texto {
   text-align: justify;
 }
 
 .form-control{
   background-color: white;
+}
+
+.search-container {
+    padding-top: 30px;
+  }
+
+.search-title {
+        font-size: 22px;
+        text-align: center;
+        color: black;
+    }
+
+.search-input {
+        width: 100%;
+        padding: 12px 24px;
+        background-color: transparent;
+        transition: transform 250ms ease-in-out;
+        font-size: 14px;
+        line-height: 18px;
+        color: black;
+        background-color: transparent;
+    }
+
+    li{
+    	list-style-type: none;
+    	margin-top:25px;
+    	counter-increment:circulo;
+    }
+    li:before{
+    	padding:5px;
+    	padding-left:9px;
+    	padding-right:9px;
+    	margin-right:20px;
+    	background-color:#CFF;
+    	border-radius: 20px 20px 20px 20px;
+
+    	content: counter(circulo);
+
+    	text-shadow:0 0 6px #000;
+    	box-shadow:2px 2px 5px #000;
+
+    	color:#000;
+    }
+
+    li:after{
+	text-shadow:2px 2px 6px #000;
+}
+
+li:hover{
+	color:#fff;
 }
