--- a/Blog_Gastronomia/css/estilos.css
+++ b/Blog_Gastronomia/css/estilos.css
@@ -15,6 +15,14 @@ h3{
   float: right;
 }
 
+legend{
+  font-size: 100%;
+}
+
+h1{
+  text-align: center;
+}
+
 #barra{
   background-color: rgba(255,231,206,0.4);
 }
@@ -122,18 +130,18 @@ ul {
 
 .comments-container {
 	margin: 60px auto 15px;
-	width: 97%;
+	width: 100%;
 }
 
 .comments-container h1 {
 	font-size: 25px;
 	color: #283035;
-	font-weight: 400;
+	font-weight: 100%;
 }
 
 .comments-container h1 a {
 	font-size: 15px;
-	font-weight: 700;
+	font-weight: 100%;
 }
 
 .comments-list {
