--- a/Blog_Turismo/css/estilos.css
+++ b/Blog_Turismo/css/estilos.css
@@ -8,3 +8,12 @@ body{
   margin-top: 0.5rem;
   float: left;
 }
+
+.nav-wrapper{
+  padding: 0px;
+}
+
+h3{
+  font-style: italic;
+  font-style: bold;
+}
