--- a/Blog_Turismo/css/estilos.css
+++ b/Blog_Turismo/css/estilos.css
@@ -4,16 +4,59 @@ body{
 }
 
 .logo img{
-  width: 60%;
+  width: 90%;
   margin-top: 0.5rem;
   float: left;
 }
 
-.nav-wrapper{
-  padding: 0px;
+#redes img{
+  width: 50px;
+}
+
+#imagenes img{
+  width: 100%;
+  padding: 6px;
+}
+
+#imagenes{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#barra{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#barra-nav{
+  margin-top: 0.5vw;
+  height: 50px;
+}
+
+#post{
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#post-img{
+  width: 300px;
+  padding: 5px;
+}
+
+#post p{
+  text-align: justify;
+  font-size: 20px;
+}
+
+@media screen and (max-width:420px) and (max-width:720px){
+.icono {
+font-size: 12px;
 }
 
 h3{
+  font-size: 20px;
   font-style: italic;
   font-style: bold;
+}
+
+#redes img{
+  width: 25px;
+}
 }
